# gpr

./: .gitignore  CMakeLists.txt  mo.c  mo.h  mo_hash.c  mo_hash.h  mo_list.c  mo_list.h  mo_map.c  mo_map.h  mo_set.h  mo_stream_file.c  mo_stream_string.c  mo_utils.c  mo_utils.h  mo_v2.c  quickstart-main.c  stdafx.cpp  test1.proto
examples/: CMakeLists.txt
examples/examples-quickstart/: CMakeLists.txt  quickstart-main.c
examples/quickstart/: CMakeLists.txt
plugins/: CMakeLists.txt  mo_list.h
plugins/plugins-protobuf/: CMakeLists.txt  protobuf.ebnf  protobuf.h  protobuf_cm.c  protobuf_cm.h  protobuf_compiler.c  protobuf_compiler.h  protobuf_lex.c  protobuf_lex.h  protobuf_model.c  protobuf_model.h  protobuf_stream.c  protobuf_stream.h  protobuf_token.c  protobuf_token.h  protobuf_unit_app.c  protobuf_unit_enum.c  protobuf_unit_enum_item.c  protobuf_unit_enum_item_list.c  protobuf_unit_import.c  protobuf_unit_message.c  protobuf_unit_message_field.c  protobuf_unit_message_field_list.c  protobuf_unit_option.c  protobuf_unit_package.c  protobuf_unit_param_list.c  protobuf_unit_ref.c  protobuf_unit_reserved.c  protobuf_unit_reserved_id.c  protobuf_unit_reserved_name.c  protobuf_unit_service.c  protobuf_unit_service_field_list.c  protobuf_unit_service_method.c  protobuf_unit_syntax.c
